tests/ui/derive/fail_missing_table.rs
#![allow(unused_imports)]

use foundry::prelude::*;

#[derive(foundry::Model)]
struct User {
    id: i64,
}

fn main() {}
